# lintersmagic

./: .gitignore  README.md  lintersmagic.py  pyproject.toml
.github/workflows/: workflow.yml
notebook/: examples.ipynb  examples_black.ipynb
tests/: test_linters_magic.py  test_pycodestyle_magic.py
